# TemPCC

./: CMakeLists.txt  Readme.md
images/: teaser.xcf
lib/glad/: CMakeLists.txt
lib/imgui-1.88/: CMakeLists.txt  imgui_cg1_helpers.h
shader/: immediateLighting.frag  immediateLighting.vert  lines.frag  lines.vert  singleColorShader.frag  singleColorShader.vert  splats.frag  splats.vert
shader/attention/: debugLineShader.frag  debugLineShader.vert  flowShader.frag  flowShader.geo  flowShader.vert  groundTruthFlowShader.geo  groundTruthFlowShader.vert  splatShader.frag  splatShader.vert
shader/attention/debug/: debugFlows.frag  debugFlows.geo  debugFlows.vert  debugSplats.frag  debugSplats.vert  debugTemporalFlows.frag  debugTemporalFlows.geo  debugTemporalFlows.vert  debugTemporalPoints.frag
src/: Data.cpp  Data.h  main.cpp  pch.h
src/pcfilter/: ClippingFilter.cu  ClippingFilter.h  ErosionFilter.cu  ErosionFilter.h  Filter.cpp  Filter.h  SpatialHoleFiller.cu  SpatialHoleFiller.h  TemporalHoleFiller.cu  TemporalHoleFiller.h  TemporalNoiseFilter.cu  TemporalNoiseFilter.h
src/pcrenderer/: Renderer.cpp  Renderer.h  SplatRenderer.h
src/pcrenderer/pdflow/: PDFlow.h  pdflow_cudalib.cu  pdflow_cudalib.h
src/pcrenderer/tempcc/: TemPCCRenderer.cpp  TemPCCRenderer.h  TemPCCRendererKernels.cu  TemPCCRendererKernels.h  TemPCCRendererThrust.cu  TemPCCRendererThrust.h  TemPCCStructs.h  TinyFlowNet.h
src/pcstreamer/: AzureKinectMKVStreamer.h  BinaryStreamer.h  Streamer.cpp  Streamer.h
src/pcstreamer/azure_mkv/: AzureKinectMKVStream.h
src/pcstreamer/binary/: BinaryStream.cpp  BinaryStream.h
src/util/: OrganizedPointCloud.cpp  OrganizedPointCloud.h  Semaphore.h  TimeMeasurement.h
src/util/cuda/: CuHashSet.cu  CuHashSet.h
src/util/gl/: GLMesh.cpp  GLMesh.h  GLRenderable.h  Shader.cpp  Shader.h  Texture2D.cpp  Texture2D.h  TextureFBO.cpp  TextureFBO.h
src/util/gl/objects/: GLCoordinateSystem.h
src/util/gl/primitive/: TexCoord.h  Triangle.h  Vertex.h
src/util/math/: Mat4.h  Vec4.h
tools/training_gen/: Readme.md
unrefactored_classes/: Net.h  Readme.md  TemPCCRenderer.cpp  TemPCCRenderer.h  TemPCCRendererKernels.cu  TemPCCRendererKernels.h  TemPCCRendererThrust.cu  TemPCCRendererThrust.h  TemPCCStructs.h
